--- a/index.html
+++ b/index.html
@@ -1,176 +1,176 @@
 <! doctype html >
-< html >
-< cabeza >
- < meta  charset = " utf-8 " >
-  < título > Aprende Chino por tu Cuenta </ título >
-  < estilo >
-      cuerpo {
-          fondo : rgb ( 92 ,  0 ,  3 );
-          tamaño de fuente :  22 px ;
-           familia de fuentes :  "Verdana" , sans-serif;
-           color : rgb ( 232 ,  90 ,  90 );
+<html>
+<head>
+ <meta charset="utf-8">
+  <title>Aprende Chino por tu Cuenta</title>
+  <style>
+      body{
+          background:rgb(92, 0, 3);
+          font-size: 22px;
+           font-family: "Verdana", sans-serif;
+           color:rgb(232, 90, 90);
           }
       }
-      h1 {
-          col o : rgb ( 255 ,  255 ,  255 );
+      h1{
+          color:rgb(255, 255, 255);
       }
-       h2 {
-          color : rgb ( 240 ,  170 ,  170 );
+       h2{
+          color:rgb(240, 170, 170);
       }
 
-   p {
-       alinear texto : justificar;
+   p{
+       text-align: justify;
    }
-      h3 {
-           familia de fuentes : fantasía;
-           color : rgb ( 222 ,  91 ,  91 );
+      h3{
+           font-family: fantasy;
+           color:rgb(222, 91, 91);
       }
-      # primer {
-           estilo de fuente : cursiva;
+      #primer{
+           font-style: italic;
       }
-      # pasos {
-         flotar : derecha;
-            ancho :  30 % ;
-            margen derecho :  10 px ;
+      #pasos{
+         float: right;
+            width: 30%;
+            margin-right: 10px;
       }
-      # tabla {
-          fondo :  rgb ( 84 ,  39 ,  44 );
-            ancho :  72 % ;
-            altura :  180 px ;
-            desbordamiento-y : automático;
-            overflow-x : oculto;
-            flotar : derecha;
-            margen derecho :  15 % ;
-            margen inferior :  10 px ;
+      #tabla{
+          background: rgb(84, 39, 44);
+            width: 72%;
+            height: 180px;
+            overflow-y: auto;
+            overflow-x: hidden;
+            float: right;
+            margin-right: 15%;
+            margin-bottom: 10px;
       }
-      # chino {
-          ancho :  90 % ;
-            margen : automático;
-            borde :  rgb sólido de 1 px ( 255 , 255 , 255 );  
-            borde superior :  rgb sólido de 10 px ( 255 , 255 , 255 );  
+      #chino{
+          width: 90%;
+            margin: auto;
+            border: 1px solid rgb(255, 255, 255);
+            border-top: 10px solid rgb(255, 255, 255);
       }
-      . tiempo {
-          borde superior :  RGB sólido de 3 px ( 255 , 255 , 255 );  
-                borde inferior :  rgb sólido de 3 px ( 255 , 255 , 255 );  
-                padding-top :  6 px ;
-                fondo acolchado :  6 px ;
+      .tiempo{
+          border-top: 3px solid rgb(255, 255, 255);
+                border-bottom: 3px solid rgb(255, 255, 255);
+                padding-top: 6px;
+                padding-bottom: 6px;
       }
-      . super-importante {
-          color : rgb ( 255 ,  0 ,  0 );
+      .super-importante{
+          color:rgb(255, 0, 0);
       }
-      h3 . super-importante {
-          borde :  rgb sólido de 5 px ( 255 , 255 , 255 );  
+      h3.super-importante{
+          border: 5px solid rgb(255, 255, 255);
       }
-      a : hover ,  a : active ,  a : focus {
-                color de fondo :  rgb ( 255 ,  255 ,  255 );
+      a:hover, a:active, a:focus { 
+                background-color: rgb(255, 255, 255);
       }
-      . pinyin {
-           borde :  8 px doble rgb ( 255 ,  255 ,  255 );
+      .pinyin{
+           border: 8px double rgb(255, 255, 255);
       }
-      . tamano {
-          ancho : 50 % ;
+      .tamano{
+          width:50%;
       }
-      img {
-pantalla : bloque;
-margen : automático;
+      img{
+display:block;
+margin:auto;
 }
-. tono {
-    borde :  rgb de cresta de 10 px ( 255 , 183 , 0 );  
+.tono{
+    border: 10px ridge rgb(255, 183, 0);
 }
-  </ estilo >
-	 < cuerpo >
-	 < div  id = " chino " >
-	 < h1 > Aprende Chino por tu Cuenta </ h1 >
-	 < div  id = " pasos " > < h2 > Pasos </ h2 >
-	 < ol   id = " imprimación " >
-	 < Li > < un  href = " # 1 " > Primer Paso </ una > </ li >
-	  < Li > < un  href = " # 2 " > Segundo Paso </ una > </ li >
-	 </ ol >
-	  </ div >
+  </style>
+	 <body>
+	 <div id="chino">
+	 <h1>Aprende Chino por tu Cuenta</h1>
+	 <div id="pasos"><h2>Pasos</h2>
+	 <ol  id="primer">
+	 <li><a href="#1">Primer Paso</a></li>
+	  <li><a href="#2"> Segundo Paso</a></li>
+	 </ol>
+	  </div>
 	 
-		< h1  id = " 1 " > Primer Paso </ h1 >
-		< H2 > Antes de Comenzar </ h2 > < br >
-		< h3  class = " tiempo " > Motivación </ h3 >
-		< p > El Chino es un idioma muy conocido por ser difícil, sin embargo esta es una verdad a medios, sí, es < em > difícil </ em > , para quienes no tienen la motivación correcta. Es < strong > importante </ strong > saber que (para estudiar cualquier idioma), si no buscas las razones mas solidas para hacer algo puede que te quedes a mitad de camino o incluso que nunca empices. Realiza esta primera actividad: </ p >	
-		< ul > < li > Ennumera las razones que tienes para estudiar, de la más importante a la menos importante. Aqui un ejemplo: </ li > </ ul >
-		< ol >
-			< li > Trabajar y Vivir en China </ li >
-			< li > Tener acceso a la educación en Chino </ li >
-			< li > Hablar fluido con Chinos </ li >
-			< li > Entender doramas Chinos </ li >
-		</ ol >
-		< h3  class = " tiempo " > Enfoque </ h3 >
-< p > < strong > < em > Las razones tambien son importantes para saber en que se necesita enfocar, por ejemplo talvez se necesita aprender mas el habla que la escritura </ em > </ strong > </ p >
-< h3  class = " tiempo super-importante " > Tiempo </ h3 >
-< p > Necesitarás mucho tiempo para aprender chino, este es el idioma que más horas te llevará a aprender. < strong  class = " super-importante " > Estudiar todos los dias </ strong > es muy importante, y escoger un día para estudiar mucho más tiempo son cosas necesarias para progresar. < Br > Solo con mucho Esfuerzo y dedicación lograrás < em > Aprender Chino </ em > y Alcanzar Todas tus Metas </ p >
+		<h1 id="1">Primer Paso</h1>
+		<h2>Antes de Comenzar</h2><br>
+		<h3 class="tiempo">Motivación</h3>
+		<p>El Chino es un idioma muy conocido por ser difícil, sin embargo esta es una verdad a medias, sí, es <em>difícil</em>, para quienes no tienen la motivación correcta. Es <strong>importante</strong> saber que (para estudiar cualquier idioma), si no buscas las razones mas solidas para hacer algo puede que te quedes a mitad de camino o incluso que nunca empices. Realiza esta primera actividad:</p>	
+		<ul><li>Ennumera las razones que tienes para estudiar, de la más importante a la menos importante. Aqui un ejemplo:</li></ul>
+		<ol>
+			<li>Trabajar y Vivir en China</li>
+			<li>Tener acceso a la educación en Chino</li>
+			<li>Hablar fluido con Chinos</li>
+			<li>Entender doramas Chinos</li>
+		</ol>
+		<h3 class="tiempo">Enfoque</h3>
+<p><strong><em>Las razones tambien son importantes para saber en que se necesita enfocar, por ejemplo talvez se necesita aprender mas el habla que la escritura</em></strong></p>
+<h3 class="tiempo super-importante">Tiempo</h3>
+<p>Necesitarás mucho tiempo para aprender chino, este es el idioma que mas horas te llevará aprender. <strong class="super-importante">Estudiar todos los dias</strong> es muy importante, y escoger un día para estudiar mucho mas tiempo son cosas necesarias para progresar.<br> Solo con mucho esfuerzo y dedicación lograrás <em>aprender Chino</em> y alcanzar todas tus metas</p>
 
-< h1  id = " 2 " > Segundo Paso </ h1 >
-< h2 > Para Comenzar </ h2 >
-< h3 > El Pinyin </ h3 >
-< p > El Pinyin es un sistema de escritura latina para transcribir foneticamente la pronunciación del chino, nos ayudaría a pronunciar y aprender caracteres debido a que los caracteres no dan información de su pronunciación exacta. < Br >
-Estudiar el pinyin, no es una opción que se puede saltar si desea estudiar chino, ¡Hasta a los mismos chinos les toca aprenderse el pinyin para poder escribir y aprender su propio idioma!
-</ p >
+<h1 id="2">Segundo Paso</h1>
+<h2>Para Comenzar</h2>
+<h3>El Pinyin</h3>
+<p>El Pinyin es un sistema de escritura latina para transcribir foneticamente la pronunciación del chino, nos ayudará a pronunciar y aprender caracteres debido a que los caracteres no dan información de su pronunciación exacta.<br>
+Estudiar el pinyin, no es una opción que se puede saltar si se desea estudiar chino, ¡Hasta a los mismos chinos les toca aprenderse el pinyin para poder escribrir y aprender su propio idioma!
+</p>
       
-< img  class = " pinyin tamano " src = " https://upload.wikimedia.org/wikipedia/commons/2/2d/Pinyin_silabas.png " >
-< p > Además el pinyin es muy fácil de aprender !, tiene muchos sonidos parecidos al español. Primero aprenderemos lo básico, para empezar ve los siguientes videos y despues repasalos varias veces, al menos una vez, de todas formas con el paso del tiempo podras pronunciar mejor !, créeme, yo tambien tuve que empezar de cero y al principio ni siquiera me entendia a mi misma, tuve que practicar mucho para mejorar. </ p >
-< Un  href = " https://youtu.be/lO3bifZoTr0 " > Video 1 para Aprender Pinyin </ una > < br >
-< Un  href = " https://youtu.be/2cbyF19cP6M " > Video 2 para Aprender Pinyin </ una >
-< p > < em > Te recomiendo ambientarte mucho en el idioma, escucha musica, ve dramas chinos, ve datos curioso de la cultura, todo lo que aprendas puede serte util < strong > (sin embargo fíjate de que de verdad estes aprendiendo y no perdiendo el tiempo) </ strong > </ em > </ p >
-< div  id = " tabla " > < p > La siguiente tabla la tendras que cosultar de ahora en adelante: </ p >
- < tabla >
-            < thead >
-                < tr >
-                    < th >
-                    < th >
-                    < th > Explosivas </ th >
-                    < th >
-                </ tr >
-            </ thead >
-            < tbody >
-                < tr >
-                < Th > Consonantes
-                    < td > b </ td >
-                    < td > p </ td >
-                    < td > m </ td >
-                    < td > f </ td >
-                </ tr >
-                < tr >
-                    < td >
-                    < td > d </ td >
-                    < td > t </ td >
-                    < td > n </ td >
-                    < td > l </ td >
-                </ tr >
-                < tr >
-                < td >
-                    < td > j </ td >
-                    < td > q </ td >
-                    < td > x </ td >
-                </ tr >
-                 < tr >
-                    < td >
-                    < td > zh </ td >
-                    < td > ch </ td >
-                    < td > sh </ td >
-                    < td > r </ td >
-                </ tr >
-                 < tr >
-                < td >
-                    < td > g </ td >
-                    < td > k </ td >
-                    < td > h </ td >
-                </ tr >
-                 < tr >
-                < td >
-                    < Td > y </ td >
-                    < td >
-                    < td > w </ td >
-                </ tr >
+<img class="pinyin tamano" src="https://upload.wikimedia.org/wikipedia/commons/2/2d/Pinyin_silabas.png">
+<p>Además el pinyin es muy facil de aprender!, tiene muchos sonidos parecidos al español. Primero aprenderemos lo básico, para empezar ve los siguientes videos y despues repasalos varias veces, al menos una vez, de todas formas con el paso del tiempo podras pronunciar mejor!, créeme, yo tambien tuve que empezar de cero y al principio ni siquiera me entendia a mi misma, tuve que practicar mucho para mejorar.</p>
+<a href="https://youtu.be/lO3bifZoTr0">Video 1 para aprender Pinyin</a><br>
+<a href="https://youtu.be/2cbyF19cP6M">Video 2 para aprender Pinyin</a>
+<p><em>Te recomiendo ambientarte mucho en el idioma, escucha musica, ve dramas chinos, ve datos curioso de la cultura, todo lo que aprendas puede serte util <strong>(sin embargo fíjate de que de verdad estes aprendiendo y no perdiendo el tiempo)</strong></em></p>
+<div id="tabla"><p>La siguiente tabla la tendras que cosultar de ahora en adelante:</p>
+ <table>
+            <thead>
+                <tr>
+                    <th>
+                    <th>
+                    <th>Explosivas</th>
+                    <th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <Th>Consonantes
+                    <td>b</td>
+                    <td>p</td>
+                    <td>m</td>
+                    <td>f</td>
+                </tr>
+                <tr>
+                    <td>
+                    <td>d</td>
+                    <td>t</td>
+                    <td>n</td>
+                    <td>l</td>
+                </tr>
+                <tr>
+                <td>
+                    <td>j</td>
+                    <td>q</td>
+                    <td>x</td>
+                </tr>
+                 <tr>
+                    <td>
+                    <td>zh</td>
+                    <td>ch</td>
+                    <td>sh</td>
+                    <td>r</td>
+                </tr>
+                 <tr>
+                <td>
+                    <td>g</td>
+                    <td>k</td>
+                    <td>h</td>
+                </tr>
+                 <tr>
+                <td>
+                    <td>y</td>
+                    <td>
+                    <td>w</td>
+                </tr>
                 
-            </ tbody >
-        </ Mesa > </ div > < br >
-        < img  class = " tono tamano " src = " https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/Pinyin_Tone_Chart-es.svg/800px-Pinyin_Tone_Chart-es.svg.png " > < br >
-        </ div >
-   </ cuerpo >
-</ cabeza >
-</ html >
+            </tbody>
+        </table></div><br>
+        <img class="tono tamano"src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/Pinyin_Tone_Chart-es.svg/800px-Pinyin_Tone_Chart-es.svg.png"><br>
+        </div>
+   </body>
+</head>
+</html>
